--- a/TP2 DevGraphique/TP2 DevGraphique/Properties/Resources.resx
+++ b/TP2 DevGraphique/TP2 DevGraphique/Properties/Resources.resx
@@ -118,6 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="Autumn_Lion_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Autumn_Lion-icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="bas1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\bas1.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -130,14 +133,8 @@
   <data name="buffalo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\buffalo.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="coloriage_licorne1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\coloriage-licorne1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="DessinLion" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\DessinLion.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="dessin_mouton" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\dessin_mouton.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Dorset_Sheep_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Dorset_Sheep-icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="droite1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\droite1.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -183,6 +180,9 @@
   </data>
   <data name="personnages" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\personnages.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="UNICORN" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\UNICORN.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="zoo_tileset" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\zoo_tileset.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
