--- a/TP2 DevGraphique/TP2 DevGraphique/Properties/Resources.resx
+++ b/TP2 DevGraphique/TP2 DevGraphique/Properties/Resources.resx
@@ -133,8 +133,17 @@
   <data name="buffalo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\buffalo.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="coloriage_licorne1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\coloriage-licorne1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="CONCIERGE_GB_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\CONCIERGE_GB_1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="DessinLion" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\DessinLion.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="dessin_mouton" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\dessin_mouton.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Dorset_Sheep_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Dorset_Sheep-icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
