--- a/TP2 DevGraphique/TP2 DevGraphique/Properties/Resources.resx
+++ b/TP2 DevGraphique/TP2 DevGraphique/Properties/Resources.resx
@@ -172,6 +172,9 @@
   <data name="hippopotame" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\hippopotame.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="janitor" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\janitor.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="licorne" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\licorne.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
