Générateur de noms dans animaux.cs

--- a/TP2 DevGraphique/TP2 DevGraphique/Properties/Resources.resx
+++ b/TP2 DevGraphique/TP2 DevGraphique/Properties/Resources.resx
@@ -178,6 +178,12 @@
   <data name="lion" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\lion.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="ListeNomsFeminins" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ListeNomsFeminins.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="ListeNomsMasculins" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ListeNomsMasculins.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
   <data name="mouton" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\mouton.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
